Add api 21 and above support
Signed-off-by: Lucchetto <lucchetto.tie@live.com>

--- a/hidden-api/build.gradle
+++ b/hidden-api/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        minSdk 31
+        minSdk 21
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -28,6 +28,8 @@ android {
 }
 
 dependencies {
+
+    implementation 'androidx.annotation:annotation:1.3.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
