--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ dependencyResolutionManagement {
 rootProject.name = "AndroidSystemBlur"
 include ':library'
 include ':hidden-api'
+include ':hiddenapibypass'
 include ':demo'
